force-app/main/default/objects/ProfessionCourse__c/ProfessionCourse__c.object-meta.xml
<CustomObject>
    <label>מגמה</label>
    <nameField>
        <label>שם עיסוק/מגמה</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>מגמות</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>