force-app/main/default/objects/ProfessionCourse__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>קוד מגמה</description>
    <externalId>true</externalId>
    <label>קוד מגמה</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>