force-app/main/default/objects/ProfessionCourse__c/fields/Digital__c.field-meta.xml
<CustomField>
    <fullName>Digital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>מגמה דיגיטלית</label>
    <type>Checkbox</type>
</CustomField>