force-app/main/default/objects/ProfessionCourse__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>תחומים שער לקריירה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProfessionDomain</valueSetName>
    </valueSet>
</CustomField>