force-app/main/default/objects/ProfessionCourse__c/fields/Kita_Bemifal__c.field-meta.xml
<CustomField>
    <fullName>Kita_Bemifal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>כיתה במפעל</label>
    <type>Checkbox</type>
</CustomField>