force-app/main/default/objects/ProfessionCourse__c/fields/Mahat__c.field-meta.xml
<CustomField>
    <fullName>Mahat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>מה&quot;ט</label>
    <type>Checkbox</type>
</CustomField>