force-app/main/default/objects/ProfessionCourse__c/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <description>שם קורס לחיפוש</description>
    <label>שם חלופי</label>
    <length>255</length>
    <type>Text</type>
</CustomField>