force-app/main/default/objects/ProfessionCourse__c/fields/Numeric_index__c.field-meta.xml
<CustomField>
    <fullName>Numeric_index__c</fullName>
    <description>קוד מספרי</description>
    <externalId>true</externalId>
    <label>קוד ממשל זמין</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>