force-app/main/default/objects/ProfessionCourse__c/fields/OJT__c.field-meta.xml
<CustomField>
    <fullName>OJT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OJT</label>
    <type>Checkbox</type>
</CustomField>