force-app/main/default/objects/ProfessionCourse__c/fields/Only_Prat__c.field-meta.xml
<CustomField>
    <fullName>Only_Prat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>רק בפרט</label>
    <type>Checkbox</type>
</CustomField>