force-app/main/default/objects/ProfessionCourse__c/fields/Profession_Cluster__c.field-meta.xml
<CustomField>
    <fullName>Profession_Cluster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>אשכול</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ProfessionCourse__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Profession Cluster</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ProfessionCourse__c</referenceTo>
    <relationshipLabel>מגמות</relationshipLabel>
    <relationshipName>ProfessionCluster</relationshipName>
    <type>Lookup</type>
</CustomField>