force-app/main/default/objects/ProfessionCourse__c/fields/Profession_Cluster_Branch__c.field-meta.xml
<CustomField>
    <fullName>Profession_Cluster_Branch__c</fullName>
    <formula>TEXT(Profession_Cluster__r.Domain__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>שם ענף</label>
    <type>Text</type>
</CustomField>