force-app/main/default/objects/ProfessionCourse__c/fields/Profession_Cluster_Name__c.field-meta.xml
<CustomField>
    <fullName>Profession_Cluster_Name__c</fullName>
    <formula>Profession_Cluster__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>שם אשכול</label>
    <type>Text</type>
</CustomField>