force-app/main/default/objects/ProfessionCourse__c/fields/Profession_Code__c.field-meta.xml
<CustomField>
    <fullName>Profession_Code__c</fullName>
    <label>קוד מקצוע</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>