force-app/main/default/objects/ProfessionCourse__c/fields/Profession_Group__c.field-meta.xml
<CustomField>
    <fullName>Profession_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>קבוצה</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ProfessionCourse__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Profession Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ProfessionCourse__c</referenceTo>
    <relationshipLabel>מגמות (קבוצה)</relationshipLabel>
    <relationshipName>ProfessionGroup</relationshipName>
    <type>Lookup</type>
</CustomField>