force-app/main/default/objects/ProfessionCourse__c/fields/ProfessionCourseStatus__c.field-meta.xml
<CustomField>
    <fullName>ProfessionCourseStatus__c</fullName>
    <label>סטטוס מגמה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>טיוטה</fullName>
            </value>
            <value>
                <fullName>ממתין לאישור</fullName>
            </value>
            <value>
                <fullName>אושר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>