force-app/main/default/objects/ProfessionCourse__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>ענף</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>בניין וסביבה</fullName>
            </value>
            <value>
                <fullName>מחשבים</fullName>
            </value>
            <value>
                <fullName>תחבורה</fullName>
            </value>
            <value>
                <fullName>דפוס צילום והפקה</fullName>
            </value>
            <value>
                <fullName>טיפוח החן</fullName>
            </value>
            <value>
                <fullName>הצלה ומקצועות ימיים</fullName>
            </value>
            <value>
                <fullName>מינהל</fullName>
            </value>
            <value>
                <fullName>חינוך וטיפול</fullName>
            </value>
            <value>
                <fullName>מערכות אנרגיה ומים</fullName>
            </value>
            <value>
                <fullName>מתכת/מכונות</fullName>
            </value>
            <value>
                <fullName>רכב</fullName>
            </value>
            <value>
                <fullName>הארחה</fullName>
            </value>
            <value>
                <fullName>חשמל ואלקטרוניקה</fullName>
            </value>
            <value>
                <fullName>אופנה וטקסטיל</fullName>
            </value>
            <value>
                <fullName>עץ</fullName>
            </value>
            <value>
                <fullName>פרה-רפואי</fullName>
            </value>
            <value>
                <fullName>שונות</fullName>
            </value>
            <value>
                <fullName>מקצועות יהדות</fullName>
            </value>
            <value>
                <fullName>תעשייה וניהול</fullName>
            </value>
            <value>
                <fullName>חקלאות ונוי</fullName>
            </value>
            <value>
                <fullName>הוראה</fullName>
            </value>
            <value>
                <fullName>מכינות</fullName>
            </value>
            <value>
                <fullName>נגישות</fullName>
            </value>
            <value>
                <fullName>קידום נשים</fullName>
            </value>
            <value>
                <fullName>מלאכה</fullName>
            </value>
            <value>
                <fullName>מיומנויות משרד</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
            <value>
                <fullName>אילנאות</fullName>
            </value>
            <value>
                <fullName>לוגיסטיקה</fullName>
            </value>
            <value>
                <fullName>מכונות</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>