force-app/main/default/objects/ProfessionCourse__c/fields/StudiesScope__c.field-meta.xml
<CustomField>
    <fullName>StudiesScope__c</fullName>
    <label>היקף שעות</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>