force-app/main/default/objects/ProfessionCourse__c/fields/SyllabusUrlFormula__c.field-meta.xml
<CustomField>
    <fullName>SyllabusUrlFormula__c</fullName>
    <formula>IF( NOT(ISBLANK( SyllabusUrl__c )),
SyllabusUrl__c ,
null )</formula>
    <label>SyllabusUrlFormula</label>
    <type>Text</type>
</CustomField>