force-app/main/default/objects/ProfessionCourse__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>תגיות</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>