force-app/main/default/objects/ProfessionCourse__c/recordTypes/Profession.recordType-meta.xml
<RecordType>
    <fullName>Profession</fullName>
    <active>true</active>
    <description>מגמה</description>
    <label>Profession</label>
</RecordType>