force-app/main/default/objects/ProfessionCourse__c/recordTypes/Profession_Cluster.recordType-meta.xml
<RecordType>
    <fullName>Profession_Cluster</fullName>
    <active>true</active>
    <description>אשכול</description>
    <label>Profession Cluster</label>
</RecordType>