force-app/main/default/objects/ProfessionCourse__c/recordTypes/Profession_Group.recordType-meta.xml
<RecordType>
    <fullName>Profession_Group</fullName>
    <active>true</active>
    <description>קבוצה</description>
    <label>Profession Group</label>
</RecordType>