force-app/main/default/objects/ProfessionCourse__c/validationRules/Digital_Course_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Digital_Course_Code</fullName>
    <active>true</active>
    <description>אם הצקבוקס &quot;מגמה דיגיטלית&quot; מסומן וגם קוד מגמה לא מתחיל ב 555, יש לזרוק הודעת שגיאה או אם הצקבוקס &quot;מגמה דיגיטלית&quot; לא מסומן וגם קוד מגמה מתחיל ב 555, יש לזרוק הודעת שגיאה למשתמש</description>
    <errorConditionFormula>(Digital__c = FALSE &amp;&amp;  BEGINS(Code__c , &quot;555&quot;)) ||( Digital__c = TRUE &amp;&amp;  NOT(BEGINS(Code__c , &quot;555&quot;)))</errorConditionFormula>
    <errorDisplayField>Code__c</errorDisplayField>
    <errorMessage>בבחירת מגמה דיגיטלית קוד המגמה חייב להתחיל בספרות 555</errorMessage>
</ValidationRule>