force-app/main/default/objects/ProfessionCourse__c/validationRules/Sector_Or_Domain_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Sector_Or_Domain_Not_Null</fullName>
    <active>true</active>
    <description>ביצירה מגמה יש לוודא הזנת ענף או תחומים שער לקריירה</description>
    <errorConditionFormula>RecordType.DeveloperName =&quot;Profession&quot; &amp;&amp;  
ISPICKVAL(Sector__c , &quot;&quot;) &amp;&amp;  ISPICKVAL(Domain__c , &quot;&quot;)</errorConditionFormula>
    <errorMessage>שים לב, חובה למלא שדה ענף או שדה תחומים שער לקריירה</errorMessage>
</ValidationRule>