force-app/main/default/objects/ProfessionCourse__c/listViews/Clusters.listView-meta.xml
<ListView>
    <fullName>Clusters</fullName>
    <columns>NAME</columns>
    <columns>Domain__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ProfessionCourse__c.Profession_Cluster</value>
    </filters>
    <label>אשכולות</label>
</ListView>