force-app/main/default/objects/ProfessionCourse__c/listViews/Groups.listView-meta.xml
<ListView>
    <fullName>Groups</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ProfessionCourse__c.Profession_Group</value>
    </filters>
    <label>קבוצות</label>
</ListView>