force-app/main/default/objects/ProfessionCourse__c/listViews/Profession.listView-meta.xml
<ListView>
    <fullName>Profession</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Sector__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ProfessionCourse__c.Profession</value>
    </filters>
    <label>מגמות</label>
</ListView>